# error_correcting_codes

./: CMakeLists.txt  README.md  RMLD_RM_32_16.txt  RM_32_16.gen  RM_32_16_0.txt  RM_32_16_1.txt  RM_32_16_2.txt  RM_64_22.gen  RM_64_42.gen  RM_64_57.gen  RM_8_4.gen  RM_8_4_0.txt  RM_8_4_1.txt  RM_8_4_2.txt  ResGU.txt  ResGV.txt  ResIV.txt  build.sh  build_plots.py  main.cpp  make_plots.gp  run-task.sh  run-tests.sh
MoOSresults/: RM_32_16_2.txt  RM_8_4_0.txt
src/: bool_map.h  encoder.cpp  encoder.h  linalg.cpp  linalg.h  socow_vector.h  trellis.cpp  trellis.h
tests/: encoder-tests.cpp  linalg-tests.cpp
trellis_based_rmld_results/: ResGU_RM_64_22.txt  ResGU_RM_64_42.txt  ResGU_RM_64_57.txt  ResGV_RM_64_22.txt  ResGV_RM_64_42.txt  ResGV_RM_64_57.txt  ResIV_RM_64_22.txt  ResIV_RM_64_42.txt  ResIV_RM_64_57.txt
